# iface_reg

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml  linug-gcc.yaml  win-msvc.yaml
catch2_main/: CMakeLists.txt
cmake/: ProjectStruct.cmake  canonical_project.cmake
iface_reg/: CMakeLists.txt  basic_registry.hpp  basic_registry.test.cpp  concepts.hpp  concepts.test.cpp  factory.hpp  lib.test.cpp  ns.hpp  plugin.hpp  record.hpp  registry_buckets.hpp  registry_buckets.test.cpp  registry_iterator.hpp  registry_iterator.test.cpp  std_factory.hpp  test_ifaces.test.hpp  type_list.hpp  type_list.test.cpp
tests/: CMakeLists.txt  average.test.cpp  ci_string.hpp  common_env.hpp  common_env.test.cpp  common_env.test.hpp  dec.test.cpp  dlopen.hpp  integration.test.cpp  main.test.cpp  main.test.hpp
tests/common_env/: CMakeLists.txt  common_env.cpp
tests/dyn_registry/: CMakeLists.txt  env.cpp  env.hpp  hex.cpp
tests/dynlib/: CMakeLists.txt  median.cpp
tests/dynplugin/: CMakeLists.txt  standard_deviation.cpp
tests/integration_test_app/: CMakeLists.txt  common_env.hpp  common_env.test.hpp  integration.test.cpp
tests/unix/: dlopen.cpp
tests/win/: dlopen.cpp
